--- a/projetos.html
+++ b/projetos.html
@@ -28,11 +28,15 @@
         <article>
             <p>O Stéfano's Battle Q&A é um jogo de perguntas e respostas para alunos do ensino médio, usando um layout baseado nos jogos clássicos da franquia Pokémon</p>
             <br>
-            <a target="_blank" href="https://stefanoegg.itch.io/battle-qa"><img src="imgs/qat.png"></a>
+            <a target="_blank" href="https://stefanoegg.itch.io/battle-qa"><img style="width: 300px; height: 230px;" src="imgs/qat.png"></a>
             <br>
             <p>O Fatec Astro Mission é um jogo shooter de temática espacial inspirado em clássicos como o Galaga</p>
             <br>
-            <a target="_blank" href="https://stefanoegg.itch.io/astro-mission"><img src="imgs/fam.png"></a>
+            <a target="_blank" href="https://stefanoegg.itch.io/astro-mission"><img style="width: 250px; height: 280px;" src="imgs/fam.png"></a>
+            <br>
+            <p>O encarte abaixo foi feito em sala de aula como forma de praticar o FlexBox do CSS</p>
+            <br>
+            <a target="_blank" href="encarte.html"><img style="width: 550px; height: 280px;" src="imgs/encthumb.png"></a>            
         </article>
       
     </body>
